--- a/seminovo.html
+++ b/seminovo.html
@@ -11,16 +11,9 @@
       <a href="/"><img src="assets/img/logo-sp.png" alt="logo" /></a>
     </header>
     <main>
-      <section id="bemVindo">
-        <h1>Bem - vindo a <span>Store</span>Phone</h1>
-        <p>
-          Aqui você encontra os melhores preços do mercado, visite nosso
-          catálogo abaixo e veja quais aparelhos estão disponíveis, aproveite e
-          faça uma simulação.
-        </p>
-      </section>
+
       <section id="oferta">
-        <h2>Ofertas</h2>
+        <h2>Seminovo</h2>
         <aside id="container">
           <div class="card">
             <img
@@ -49,6 +42,49 @@
             <p>por</p>
             <h4>R$ 5.999,00</h4>
           </div>
+
+          <div class="card">
+            <img
+              src="https://fakeimg.pl/148x208?text=Produto"
+              alt="imagem do produto"
+            />
+            <div class="info">
+              <h3>Iphone 14 PRO MAX</h3>
+              <p>Memoria: <span>64gb</span></p>
+              <p>cor: <span>Roxo</span></p>
+            </div>
+            <p>por</p>
+            <h4>R$ 5.999,00</h4>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://fakeimg.pl/148x208?text=Produto"
+              alt="imagem do produto"
+            />
+            <div class="info">
+              <h3>Iphone 14 PRO MAX</h3>
+              <p>Memoria: <span>64gb</span></p>
+              <p>cor: <span>Roxo</span></p>
+            </div>
+            <p>por</p>
+            <h4>R$ 5.999,00</h4>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://fakeimg.pl/148x208?text=Produto"
+              alt="imagem do produto"
+            />
+            <div class="info">
+              <h3>Iphone 14 PRO MAX</h3>
+              <p>Memoria: <span>64gb</span></p>
+              <p>cor: <span>Roxo</span></p>
+            </div>
+            <p>por</p>
+            <h4>R$ 5.999,00</h4>
+          </div>
+
           <div class="card">
             <img
               src="https://fakeimg.pl/148x208?text=Produto"
@@ -101,7 +137,7 @@
           <i class="fa-solid fa-home"></i>
           <li>Home</li></a
         >
-        <a href="./seminovo.html">
+        <a href="#">
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>S/Novos</li></a
         >
