--- a/vitrine.html
+++ b/vitrine.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/"><img src="assets/img/logo-sp.png" alt="logo" /></a>
+      <a href="./index.html"><img src="assets/img/logo-sp.png" alt="logo" /></a>
     </header>
     <main>
 
@@ -133,7 +133,7 @@
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>Vitrine</li></a
         >
-        <a href="/">
+        <a href="./index.html">
           <i class="fa-solid fa-home"></i>
           <li>Home</li></a
         >
