--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>Todos os direitos são reservados</p>
       </aside>
       <aside id="desenvolvido">
-        <p>Desenvolvido por Arthur Ximenes</p>
+        <p>Desenvolvido por <a href="#">Arthur Ximenes</a></p>
       </aside>
     </footer>
     <div id="space"></div>
