--- a/vitrine.html
+++ b/vitrine.html
@@ -129,7 +129,7 @@
           <i class="fa-solid fa-mobile-screen-button"> </i>
           <li>Novos</li>
         </a>
-        <a href="#">
+        <a href="./vitrine.html">
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>Vitrine</li></a
         >
@@ -141,7 +141,7 @@
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>S/Novos</li></a
         >
-        <a href="#">
+        <a href="./simulador.html">
           <i class="fa-solid fa-calculator"></i>
           <li>Simul.</li></a
         >
