--- a/novos.html
+++ b/novos.html
@@ -141,7 +141,7 @@
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>S/Novos</li></a
         >
-        <a href="#">
+        <a href="./simulador.html">
           <i class="fa-solid fa-calculator"></i>
           <li>Simul.</li></a
         >
