--- a/seminovo.html
+++ b/seminovo.html
@@ -137,11 +137,11 @@
           <i class="fa-solid fa-home"></i>
           <li>Home</li></a
         >
-        <a href="#">
+        <a href="./seminovo.html">
           <i class="fa-solid fa-mobile-screen-button"></i>
           <li>S/Novos</li></a
         >
-        <a href="#">
+        <a href="./simulador.html">
           <i class="fa-solid fa-calculator"></i>
           <li>Simul.</li></a
         >
