--- a/simulador.html
+++ b/simulador.html
@@ -11,56 +11,36 @@
       <a href="./index.html"><img src="assets/img/logo-sp.png" alt="logo" /></a>
     </header>
     <main>
-      <section id="bemVindo">
-        <h1>Bem - vindo a <span>Store</span>Phone</h1>
-        <p>
-          Aqui você encontra os melhores preços do mercado, visite nosso
-          catálogo abaixo e veja quais aparelhos estão disponíveis, aproveite e
-          faça uma simulação.
-        </p>
-      </section>
       <section id="oferta">
-        <h2>Ofertas</h2>
-        <aside id="container">
-          <div class="card">
-            <img
-              src="https://fakeimg.pl/148x208?text=Produto"
-              alt="imagem do produto"
-            />
-            <div class="info">
-              <h3>Iphone 14 PRO MAX</h3>
-              <p>Memoria: <span>64gb</span></p>
-              <p>cor: <span>Roxo</span></p>
-            </div>
-            <p>por</p>
-            <h4>R$ 5.999,00</h4>
-          </div>
+        <aside id="simulador">
+          <h1>Faça uma simulação e veja o valor de cada parcela</h1>
 
-          <div class="card">
-            <img
-              src="https://fakeimg.pl/148x208?text=Produto"
-              alt="imagem do produto"
-            />
-            <div class="info">
-              <h3>Iphone 14 PRO MAX</h3>
-              <p>Memoria: <span>64gb</span></p>
-              <p>cor: <span>Roxo</span></p>
-            </div>
-            <p>por</p>
-            <h4>R$ 5.999,00</h4>
+          <div class="grupo">
+            <label for="valor">Valor do Produto</label>
+            <input type="number" name="valor" id="valor" value="1000" />
           </div>
-          <div class="card">
-            <img
-              src="https://fakeimg.pl/148x208?text=Produto"
-              alt="imagem do produto"
-            />
-            <div class="info">
-              <h3>Iphone 14 PRO MAX</h3>
-              <p>Memoria: <span>64gb</span></p>
-              <p>cor: <span>Roxo</span></p>
+          <div class="grupo">
+            <label for="entrada">Entrada</label>
+            <input type="number" name="entrada" id="entrada" />
+          </div>
+          <div class="grupo">
+            <button>Calcular</button>
+          </div>
+          <div id="valores">
+            <div id="container">
+              <div>
+                <h2>Vezes</h2>
+                <ul id="v"></ul>
+              </div>
+              <div>
+                <h2>Parcelas</h2>
+                <ul id="p"></ul>
+              </div>
+              <div>
+                <h2>Total</h2>
+                <ul id="t"></ul>
+              </div>
             </div>
-            <p>por</p>
-            <h4>R$ 5.999,00</h4>
           </div>
         </aside>
       </section>
@@ -112,6 +92,8 @@
       </ul>
     </nav>
   </body>
+  <script src="./assets/js/app.js"></script>
+
   <script
     src="https://kit.fontawesome.com/64b8a3d0f4.js"
     crossorigin="anonymous"
