remoção do value

--- a/simulador.html
+++ b/simulador.html
@@ -17,7 +17,7 @@
 
           <div class="grupo">
             <label for="valor">Valor do Produto</label>
-            <input type="number" name="valor" id="valor" value="1000" />
+            <input type="number" name="valor" id="valor" />
           </div>
           <div class="grupo">
             <label for="entrada">Entrada</label>
